--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="<%= webpackConfig.output.publicPath %>favicon.ico">
-    <title>data-previs</title>
+    <title>desafio-data-previs</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but data-previs doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Javascript required</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
